# decks

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: Package.swift
app/Sources/Decks/: AnthropicClient.swift  AppleIntelligence.swift  AskView.swift  CalendarService.swift  Chat.swift  ClaudeCode.swift  CloudMirror.swift  CommandPalette.swift  DeckAssistant.swift  DeckColor.swift  DeckDetailView.swift  DeckSettingsView.swift  DeckTree.swift  DecksApp.swift  DecksStore.swift  Hotkey.swift  Identity.swift  IdentityStore.swift  Keychain.swift  MarkdownEditor.swift  MarkdownView.swift  Models.swift  NotificationPlanner.swift  NotificationScheduler.swift  OpenAIClient.swift  PaneTree.swift  Pomodoro.swift  Popout.swift  QuickCapturePanel.swift  QuickCaptureView.swift  RemindersMerge.swift  RemindersSyncEngine.swift  RootView.swift  SettingsView.swift  SpotlightIndexer.swift  Storage.swift  Support.swift  TimeTracking.swift  TodayView.swift  UpdateChecker.swift
app/Sources/Decks/Sections/: DailyView.swift  LinksView.swift  MeetingsView.swift  NotesView.swift  TimeView.swift  TodosView.swift
app/Tests/DecksTests/: DeckDigestTests.swift  DeckTreeTests.swift  NotificationPlannerTests.swift  RemindersMergeTests.swift  SpotlightEntryTests.swift  TimeLedgerTests.swift
assets/: AppIcon.icns
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs  mcp.rs
docs/: automation.md  format.md
scripts/: Info.plist  bundle.sh  install.sh  make_icon.sh  make_icon.swift
