[package]
name = "decks"
version = "0.3.0"
edition = "2024"
description = "Per-project notes CLI, sharing the on-disk format with the Decks macOS app"

[[bin]]
name = "decks"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"
uuid = { version = "1", features = ["v4"] }
